Fill banana-pudding.html with information

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/mac-and-cheese.html">Mac and Cheese</a>
+        <ol>
+            <li>
+                <a href="./recipes/mac-and-cheese.html">Mac and Cheese</a>
+            </li>
+            <li>
+                <a href="./recipes/banana-pudding.html">Banana Pudding</a>
+            </li>
+            <li>
+                <a href="./recipes/green-chile-chicken-enchilada-casserole.html">Green Chile Chicken Enchilada Casserole</a>
+            </li>
+        </ol>
+        
     </body>
 </html>
