Basic style for the page

--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="en">
+        <link rel="stylesheet" href="../style.css">
         <Title>Mac and Cheese</Title>
     </head>
     <body>
