--- a/recipes/green-chile-chicken-enchilada-casserole.html
+++ b/recipes/green-chile-chicken-enchilada-casserole.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Green Chile Chicken Enchilada Casserole</title>
     </head>
     <body>
